update blog and post detail

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                <!-- First Row -->
                <div class="product-wrapper">
                   <div class="row">
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 " >
                         <div class="product__img">
 
                            <img src="./img/adidas tenis.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -144,13 +144,13 @@
                         <div class="product__name">Tenis T-Shirt three line</div>
                         <div class="product__price">$100</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 ">
                         <div class="product__img">
 
                            <img src="./img/adidas hoodie.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -159,13 +159,13 @@
                         <div class="product__name">Adidas Hoodie</div>
                         <div class="product__price">$120</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 " >
                         <div class="product__img">
 
                            <img src="./img/nike T-shirt 2.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -174,13 +174,13 @@
                         <div class="product__name">Nike T-shirt Black</div>
                         <div class="product__price">$95</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 ">
                         <div class="product__img">
 
                            <img src="./img/nike T-shirt.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -195,13 +195,13 @@
                <!-- Second Row -->
                <div class="product-wapper">
                   <div class="row">
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 ">
                         <div class="product__img">
 
                            <img src="./img/Pant grey.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -210,13 +210,13 @@
                         <div class="product__name">Adidas Grey Pants</div>
                         <div class="product__price">$100</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 ">
                         <div class="product__img">
 
                            <img src="./img/sweatpant black.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -225,13 +225,13 @@
                         <div class="product__name">Adidas Sweat Pants</div>
                         <div class="product__price">$120</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6 ">
                         <div class="product__img">
 
                            <img src="./img/nike  air force 1.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
@@ -240,13 +240,13 @@
                         <div class="product__name">Nike Air Force 1</div>
                         <div class="product__price">$200</div>
                      </div>
-                     <div class="product-box col l-3 m-3 c-6 " onclick="window.location.href='productdetail.html'">
+                     <div class="product-box col l-3 m-3 c-6">
                         <div class="product__img">
 
                            <img src="./img/Nike custome air max 90.jpg" alt="">
                            <div class="product-interaction-bg"></div>
                            <div class="product-interaction">
-                              <i class='bx bx-show'></i>
+                              <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
                               <i class='bx bx-cart'></i>
                               <i class='bx bx-heart'></i>
                            </div>
