--- a/login.html
+++ b/login.html
@@ -112,7 +112,7 @@
                   </div>
                   <!-- Submit Buttn -->
                   <div class="field field__btn">
-                     <input type="submit" value="Login">
+                     <input type="submit" value="Login" class="login-input-btn">
                   </div>
 
 
@@ -148,7 +148,7 @@
                </div>
                <div class="field login-btn">
                   <!-- <div class="login-btn-layer"></div> -->
-                  <input type="submit" value="Create Account" onclick="return taotaikhoan()">
+                  <input type="submit" value="Create Account" class="sign-up-btn-input" onclick="return taotaikhoan()">
                </div>
             </form>
             </div>
