--- a/product.html
+++ b/product.html
@@ -159,7 +159,7 @@
                   <div class="row product-row ">
                      <div class="product-box col l-3 m-6 c-12">
                         <div class="product__img">
-                         
+
                               <img src="./img/M_END_PLSTWST_T_DJen_GS6272_21_model.jpg" alt="">
                               <div class="product-interaction-bg"></div>
                               <div class="product-interaction">
@@ -520,9 +520,8 @@
                   </li>
                </ul> -->
                <div class="about__desc">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
-                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
-                  atque.
+                  Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
+                  wear individuality meets commonality.
                </div>
 
             </div>
@@ -577,7 +576,6 @@
          </div>
       </div>
    </footer>
-
    <div class="copyright">
       <p>Copyright &copy; Zeus - Sport Men's Clothes</p>
    </div>
