--- a/productdetail.html
+++ b/productdetail.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Zues - Product Detail</title>
+   <title>Zeus - Product Detail</title>
    <!-- CSS -->
    <link rel="stylesheet" href="./css/reset.css">
    <link rel="stylesheet" href="./css/grid.css">
@@ -83,6 +83,18 @@
    <!-- Product Detail -->
    <section class="product-detail">
       <div class="grid wide">
+         <!-- Page State -->
+         <div class="page-state">
+            <div class="grid wide">
+               <div class="page-state__list">
+                  <a href="index.html" class="page-state__link">Home</a>
+                  <span>></span>
+                  <a href="productdetail.html" class="page-state__link">Product Details</a>
+               </div>
+            </div>
+         </div>
+
+
          <div class="row">
             <div class="product-detail__img-gallary col l-5 m-12 c-12">
                <div class="img-gallary__img-wrapper">
@@ -339,9 +351,8 @@
                   </li>
                </ul> -->
                <div class="about__desc">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
-                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
-                  atque.
+                  Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
+                  wear individuality meets commonality.
                </div>
 
             </div>
