--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -91,7 +91,7 @@
       <table>
          <div class="field-btn">
             <div class="btn-layer"></div>
-            <input type="submit" value="CHECKOUT">
+            <input type="submit" value="CHECKOUT" class="check-out-btn">
       </table>
    </div>
 
