--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                   <img src="./img/post1.jpg" alt="" class="about-us__img">
                </div>
                <div class="img-wrapper img-wrapper--2">
-                  <img src="./img/snkrs-style-nike-kwondo1.jpg" alt="" class="about-us__img">
+                  <img src="./img/post4.jpg" alt="" class="about-us__img">
                </div>
             </div>
             <div class="about-us__content col l-6 m-6 c-6">
@@ -245,15 +245,15 @@
                </div>
 
                <!-- <ul class="about-social">
-                     <li class="about-social__item"><a href="" class="about-social__link"><i
-                              class='bx bxl-facebook'></i></a></li>
-                     <li class="about-social__item"><a href="" class="about-social__link"><i
-                              class='bx bxl-instagram'></i></a></li>
-                     <li class="about-social__item"><a href="" class="about-social__link"><i
-                              class='bx bxl-twitter'></i></a></li>
-                     <li class="about-social__item"><a href="" class="about-social__link"><i class='bx bxs-phone'></i></a>
-                     </li>
-                  </ul> -->
+                  <li class="about-social__item"><a href="" class="about-social__link"><i
+                           class='bx bxl-facebook'></i></a></li>
+                  <li class="about-social__item"><a href="" class="about-social__link"><i
+                           class='bx bxl-instagram'></i></a></li>
+                  <li class="about-social__item"><a href="" class="about-social__link"><i
+                           class='bx bxl-twitter'></i></a></li>
+                  <li class="about-social__item"><a href="" class="about-social__link"><i class='bx bxs-phone'></i></a>
+                  </li>
+               </ul> -->
                <div class="about__desc">
                   Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
                   wear individuality meets commonality.
@@ -273,7 +273,6 @@
                   <li class="footer__item"><a href="#" class="footer__link">Help</a></li>
                   <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
                </ul>
-
             </div>
 
             <!-- Shop Section -->
