--- a/hotsale.html
+++ b/hotsale.html
@@ -459,9 +459,8 @@
                   </li>
                </ul> -->
                <div class="about__desc">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
-                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
-                  atque.
+                  Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
+                  wear individuality meets commonality.
                </div>
 
             </div>
@@ -516,7 +515,6 @@
          </div>
       </div>
    </footer>
-
    <div class="copyright">
       <p>Copyright &copy; Zeus - Sport Men's Clothes</p>
    </div>
