fix image and footer

--- a/login.html
+++ b/login.html
@@ -180,9 +180,8 @@
                   </li>
                </ul> -->
                <div class="about__desc">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vitae placeat veritatis quibusdam cum
-                  ex quas numquam laborum eaque nihil voluptatum est ullam expedita qui ipsa, repellat, ipsam iusto
-                  atque.
+                  Fashion is more than price, style is more than fame, and acceptance is more than popularity. #zeus is
+                  wear individuality meets commonality.
                </div>
 
             </div>
@@ -240,6 +239,8 @@
    <div class="copyright">
       <p>Copyright &copy; Zeus - Sport Men's Clothes</p>
    </div>
+
+
    <script src="./js/script.js"></script>
    <script src="./js/login.js"></script>
 </body>
