--- a/product.html
+++ b/product.html
@@ -394,7 +394,7 @@
                      <div class="product-box col l-3 m-6 c-12">
                         <div class="product__img">
                       
-                              <img src="./img/Screenshot (124).jpg" alt="">
+                              <img src="./img/post5.jpg" alt="">
                               <div class="product-interaction-bg"></div>
                               <div class="product-interaction">
                                  <i class='bx bx-show' onclick="window.location.href='productdetail.html'"></i>
