hot sale update img

--- a/hotsale.html
+++ b/hotsale.html
@@ -135,7 +135,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/Screenshot (123).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -150,7 +150,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/Screenshot (125).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -168,7 +168,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/adidas tenis.jpg" alt="">
+                     <img src="./img/image/image/ao/ADI_SCRIPT_WRAP_DJen_H31335_21_model.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -183,7 +183,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt.jpg" alt="">
+                     <img src="./img/image/image/ao/Ao_phong_Trefoil_DJen_DV2905_01_laydown.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -198,7 +198,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/ao/kevin-durant-nets-statement-edition-2020-jordan-nba-swingman-jersey-f8Qf6h.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -213,7 +213,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/ao/paul-george-clippers-statement-edition-2020-jordan-nba-swingman-jersey-7mw3DH.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -231,7 +231,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/adidas tenis.jpg" alt="">
+                     <img src="./img/image/image/giay/jordan-delta-2/jordan-delta-2-shoe-dG2Stx (1).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -246,7 +246,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt.jpg" alt="">
+                     <img src="./img/image/image/giay/Nike Air Presto/air-presto-id-shoe (1).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -261,7 +261,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/giay/Nike Dunk low/Nike Dunk Low SE (2).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -276,7 +276,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/giay/nike-react-vision-by-/custom-nike-react-vision-by-you (1).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -294,7 +294,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/adidas tenis.jpg" alt="">
+                     <img src="./img/image/image/giay/Nike Dunk High Up/dunk-high-up-shoes-kMksLT (1).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -309,7 +309,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt.jpg" alt="">
+                     <img src="./img/paris-saint-germain-fleece-pants-PRrXN7.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -324,7 +324,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/Screenshot (122).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -339,7 +339,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/quan/Quan_adidas_Z.N.E._Sportswear_mau_xanh_la_H39845_21_model (1).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -357,7 +357,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/adidas tenis.jpg" alt="">
+                     <img src="./img/image/image/quan/Jordan Jumpman'/jordan-jumpman-fleece-trousers-hhCW2D (2).jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -372,7 +372,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt.jpg" alt="">
+                     <img src="./img/nike-shoes-white.png" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
@@ -387,7 +387,7 @@
                <div class="product-box col l-3 m-6 c-12" onclick="window.location.href='productdetail.html'">
                   <div class="product__img">
 
-                     <img src="./img/nike T-shirt 2.jpg" alt="">
+                     <img src="./img/image/image/quan/4473003800-6-1-1.jpg" alt="">
                      <div class="product-interaction-bg"></div>
                      <div class="product-interaction">
                         <i class='bx bx-show'></i>
