--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    <div class="wrapper">
       <!-- social icon -->
       <div class="social">
-         <a href="#" class="social-icon social-icon__f">
+         <a href="https://www.facebook.com/lam.phanquang.77" class="social-icon social-icon__f">
             <i class='bx bxl-facebook'></i>
          </a>
          <a href="#" class="social-icon social-icon__ins"><i class='bx bxl-instagram'></i></a>
