update index blog

--- a/index.html
+++ b/index.html
@@ -306,32 +306,32 @@
          <div class="blog__body">
             <div class="grid wide">
                <div class="blog__wrapper">
-                  <div class="blog-box blog-box--post1">
-                     <a href="">
+                  <div class="blog-box blog-box--post1"  onclick="window.location.href='postdetail.html'">
+                     <!-- <a href="" > -->
                         <img src="./img/post1.jpg" alt="" class="blog-box__img">
                         <div class="blog-content">
                            <div class="blog-box__title">Blog's Title</div>
                            <div class="blog-box__subtitle">Blog short description</div>
                         </div>
-                     </a>
+                     <!-- </a> -->
                   </div>
-                  <div class="blog-box blog-box--post2">
-                     <a href="">
+                  <div class="blog-box blog-box--post2" onclick="window.location.href='postdetail.html'">
+                     <!-- <a href=""> -->
                         <img src="./img/post2.jpg" alt="" class="blog-box__img">
                         <div class="blog-content">
                            <div class="blog-box__title">How To Wear Casual Sportswear & Look Damn Cool</div>
                            <div class="blog-box__subtitle">Keep It Athletic Up Top</div>
                         </div>
-                     </a>
+                     <!-- </a> -->
                   </div>
-                  <div class="blog-box blog-box--post3">
-                     <a href="">
+                  <div class="blog-box blog-box--post3" onclick="window.location.href='postdetail.html'">
+                     <!-- <a href=""> -->
                         <img src="./img/post3.jpg" alt="" class="blog-box__img">
                         <div class="blog-content">
                            <div class="blog-box__title">How To Wear The Iconic Snapback For Guys</div>
                            <div class="blog-box__subtitle">Snapback & A Shirt</div>
                         </div>
-                     </a>
+                     <!-- </a> -->
                   </div>
                </div>
             </div>
