--- a/index.html
+++ b/index.html
@@ -271,12 +271,9 @@
                         Nike <span class="air">Air</span> <span class="sesh">Sesh</span>
                      </div>
                      <div class="banner-news__desc">
-                        Give golf a go like World Champion sprinter Dina Asher-Smith. Or take a swing at tennis like
-                        WNBA star Sabrina Ionescu. Step up to the plate with eight-time Paralympic international
-                        medalist Blake Leeper or take aim at archery like award-winning artist Rosalía. Whatever it is
-                        you want to do, go for it.
-                        Sure, it might not be pretty. But, trying something you have never done before is how you Play
-                        New. And that is always a win
+                        In this Behind the Design video, see how Air Sesh designer Tinker Hatfield developed the right balance between innovation and style in collaboration with Los Angeles-based dance crew and choreographers the Kinjaz. What was their reaction after wear-testing the shoe? “It feels like cheating.”
+
+                        For so long, dancers have had to choose between aesthetics and functionality when it comes to footwear. Not anymore. The Nike Air Sesh prioritizes style and performance equally. It’s a lightweight, flexible, all-in-one shoe packed with dance-focused innovation, so the whole day can be your dance session.
                      </div>
                      <div class="btn banner-news__btn">Discover</div>
                   </div>
@@ -295,10 +292,9 @@
       <section class="blog">
          <div class="heading-section blog__heading">
             <div class="heading-title blog__title">blog</div>
-            <div class="heading-subtitle blog__subtitle">Listen up, men. Whilst we universally condone the use of
-               compression tights without shorts (unless you are from the Russian ballet), there is a way to make today
-               is
-               activewear look stylish without looking like a walking billboard for Nike or Adidas.
+            <div class="heading-subtitle blog__subtitle">
+               Listen up, men. Whilst we universally condone the use of
+               compression tights without shorts (unless you are from the Russian ballet), there is a way to make today is activewear look stylish without looking like a walking billboard for Nike or Adidas.
             </div>
          </div>
 
@@ -342,9 +338,9 @@
       <section class="newletters">
          <div class="heading-section newletters__heading">
             <div class="heading-title newletters__title">NEWLETTERS</div>
-            <div class="heading-subtitle newletters__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing
-               elit.
-               Molestiae aspernatur culpa quo!</div>
+            <div class="heading-subtitle newletters__subtitle">
+               Get the newest from our store
+            </div>
          </div>
          <div class="newletters__body">
             <div class="grid wide">
@@ -480,9 +476,9 @@
                   <li class="footer__item">
                      <span><i class='bx bxs-phone'></i></span>
                      <p>
-                        <a href="tel:+0932898078" class="footer__link">0932898078</a><br>
+                        <a href="tel:+0932898078" class="footer__link"> 0292 383 5581</a><br>
                         <br>
-                        <a href="tel:+0567296579" class="footer__link">0567296579</a>
+                        <a href="tel:+0567296579" class="footer__link">0292 373 1071</a>
                      </p>
                   </li>
                   <li class="footer__item">
