--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
          <div class="newletters__body">
             <div class="grid wide">
                <div class="newletters__box">
-                  <input type="email" class="newletters__input" placeholder="Your Email...">
+                  <input type="email" class="newletters__input" required placeholder="Your Email...">
                   <button class="btn newletters__btn">Subscribe</button>
                </div>
             </div>
