--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
          </div>
          <div class="newletters__body">
             <div class="grid wide">
-               <div class="newletters__box">
+               <form class="newletters__box"> 
                   <input type="email" class="newletters__input" required placeholder="Your Email...">
                   <button class="btn newletters__btn">Subscribe</button>
-               </div>
+               </form>
             </div>
          </div>
       </section>
